# ENotes

./: .gitignore  Data_Oriented_Design_CPP.md  README.md  Real_Time_Rendering.md
Boost_CPP/: 0.Pluralsight_Overview.md
Boost_CPP/1.helloworld/: CMakeLists.txt  main.cpp
Boost_CPP/2.optional/: Address.hxx  CMakeLists.txt  Person.hxx  main.cxx
Boost_CPP/3.program_options/: CMakeLists.txt  main.cxx
Boost_CPP/4.any/: main.cxx
Boost_CPP/5.signals2/: CMakeLists.txt  main.cxx
Boost_CPP/6.filesystem/: CMakeLists.txt  main.cpp
CMake/: 0.introduction.md  intro.md
CMake/1.a.minimal/: CMakeLists.txt  tutorial.cpp
CMake/1.b.config/: CMakeLists.txt  Config.h.in  app.cxx
CMake/10.a.generator_expressions/: CMakeLists.txt  app.cxx
CMake/10.a.generator_expressions/Math/: CMakeLists.txt  Math.h  write_number_to_file.cxx
CMake/11.a.export_configuration/: CMakeLists.txt
CMake/11.a.export_configuration/Math/: CMakeLists.txt  Math.cxx  arithmetics.h
CMake/12.a.packaging/: CMakeLists.txt  Config.cmake.in  MultiCPackConfig.cmake
CMake/12.a.packaging/Math/: CMakeLists.txt
CMake/2.a.library/: CMakeLists.txt  app.cxx
CMake/2.a.library/Math/: CMakeLists.txt
CMake/3.a.usage_requirement/: CMakeLists.txt
CMake/3.a.usage_requirement/Math/: CMakeLists.txt  arithmetics.cxx
CMake/4.a.install_and_testing/: CMakeLists.txt  app.cxx
CMake/4.a.install_and_testing/Math/: CMakeLists.txt
CMake/4.a.install_and_testing/install/include/: Math.h
CMake/5.a.system_introspection/: CMakeLists.txt  app.cxx
CMake/5.a.system_introspection/Math/: CMakeLists.txt  Math.h  arithmetics.cxx
CMake/6.a.custom_command/: CMakeLists.txt
CMake/6.a.custom_command/Math/: CMakeLists.txt  arithmetics.cxx
CMake/7.a.installer/: CMakeLists.txt  app.cxx
CMake/7.a.installer/Math/: CMakeLists.txt  Math.h
CMake/8.a.testing_dashboard/: CMakeLists.txt  License.txt
CMake/9.a.static_or_shared_lib/: CMakeLists.txt  Config.h.in
CMake/9.a.static_or_shared_lib/Math/: CMakeLists.txt  arithmetics.cxx
CUDA/: 1.intro.md  Pluralsight_Intro.md
Complexity/: 0.intro.md  1.basic_complexity_classes.md  1.intro.md
ECE4795_GPU/: 1.geometry.md  2.shading.md  3.arch_and_assembly.md  4.basic_shaders.md  5.mapping_techniques.md  6.pbr.md  7.additionals.md  8.unity_source.md
Financial/: bogle.md
Git/: in_depth.md
HPC_CPP/: 0.Pluralsight_Overview.md  2.Pluralsight_MPI.md  3.Pluralsight_AMP.md  Pluralsight_OpenMP.md
HPC_CPP/1.a.helloworld/: main.cpp
HPC_CPP/1.c.synchronization/: main.cpp
HPC_CPP/2.a.helloworld/: main.cpp
HPC_CPP/2.b.customs/: CMakeLists.txt  main.cpp  person.cpp  person.h
HPC_CPP/2.c.boost_mpi/: CMakeLists.txt  main.cpp  person.h
HPC_CPP/2.d.p2p/: CMakeLists.txt  main.cpp
HPC_CPP/2.e.collective/: main.cpp
HPC_CPP/2.work_sharing/: CMakeLists.txt  main.cpp
HPC_CPP/4.sharing/: main.cpp
KnockoutJS/: main.md
Learn_CPP/: .gitignore  0_first  0_first.cpp  1_first  1_first.cpp  Learn_CPP-11_Arrays.md  Learn_CPP-12_Functions.md  Learn_CPP-13_OOP.md  Learn_CPP_1.md  Learn_CPP_10_Compound_Types_II.md  Learn_CPP_11_Arrays.md  Learn_CPP_13_OOP.md  Learn_CPP_14_Operator_Overloading.md  Learn_CPP_16_Obj_Relationship.md  Learn_CPP_17_Inheritance.md  Learn_CPP_18_Virtual_Functions.md  Learn_CPP_19_Class_Templates.md  Learn_CPP_1_Basics.md  Learn_CPP_2.md  Learn_CPP_20_Exceptions.md  Learn_CPP_21_STL.md  Learn_CPP_22_Strings.md  Learn_CPP_23_IO_Streams.md  Learn_CPP_2_Program_Structure.md  Learn_CPP_3_Debugging.md  Learn_CPP_4_Fundamental_Data_Types.md  Learn_CPP_5+_Bit_Operations.md  Learn_CPP_5_Order_Of_Operations.md  Learn_CPP_6_Scope_And_Linkage.md  Learn_CPP_7_Control_Flow.md  Learn_CPP_8_Conversion_Overloading.md  Learn_CPP_9_Compound_Type.md  Learn_CPP_9_Compound_Types_I.md  Learn_CPP_A_Libraries.md  Learn_CPP_B_Language_Versions.md  Learn_CPP_C_Conclusion.md  Learn_CPP_M_Move_and_Smart_Pointers.md  Pluralsight_Associative_Containers.md  Pluralsight_CPP14_17.md  Pluralsight_Design_Patterns.md  (+3 more)
Learn_CPP/0+1_intro/: main  main.cpp
Learn_CPP/10_enums/: main.cpp
Learn_CPP/10_structs/: main.cpp
Learn_CPP/11_arrays/: main.cpp
Learn_CPP/11_dynamic_arrays/: main.cpp
Learn_CPP/11_pointer_arithmetics/: main.cpp
Learn_CPP/11_quiz/: main.cpp
Learn_CPP/12_binsearch/: main.cpp
Learn_CPP/12_lambda/: main.cpp
Learn_CPP/13_access_modifiers/: main.cpp
Learn_CPP/13_header/: MyClass.h  MyClass1.cpp  MyClass2.cpp  main.cpp
Learn_CPP/13_member_init/: main.cpp
Learn_CPP/17_inheritance/: main.cpp
Learn_CPP/18_virtual/: main.cpp
Learn_CPP/19_template/: main.cpp
Learn_CPP/2_program_structure/: add.cpp  main  main.cpp
Learn_CPP/2_program_structure_2/: io.cpp  io.h  main  main.cpp
Learn_CPP/3_debuggers/: main
Learn_CPP/5+_bit_operators/: main.cpp
Learn_CPP/5_operators/: main.cpp
Learn_CPP/8_conversion_overload/: main.cpp
Learn_CPP/html/: Learn_CPP_10_Compound_Types_II.html  Learn_CPP_11_Arrays.html  Learn_CPP_12_Functions.html  Learn_CPP_13_OOP.html  Learn_CPP_14_Operator_Overloading.html  Learn_CPP_16_Obj_Relationship.html  Learn_CPP_17_Inheritance.html  Learn_CPP_18_Virtual_Functions.html  Learn_CPP_19_Class_Templates.html  Learn_CPP_1_Basics.html  Learn_CPP_20_Exceptions.html  Learn_CPP_21_STL.html  Learn_CPP_22_Strings.html  Learn_CPP_23_IO_Streams.html  Learn_CPP_2_Program_Structure.html  Learn_CPP_3_Debugging.html  Learn_CPP_4_Fundamental_Data_Types.html  Learn_CPP_5+_Bit_Operations.html  Learn_CPP_5_Order_Of_Operations.html  Learn_CPP_6_Scope_And_Linkage.html  Learn_CPP_7_Control_Flow.html  Learn_CPP_8_Conversion_Overloading.html  Learn_CPP_9_Compound_Types_I.html  Learn_CPP_A_Libraries.html  Learn_CPP_B_Language_Versions.html  Learn_CPP_C_Conclusion.html  Learn_CPP_M_Move_and_Smart_Pointers.html  Table_Of_Contents.html
Linux_Shell/: 0.Cheatsheet.md  1.Shell_Overview.md  2.Scripting.md
MongoDB/: intro.md
NextJS/: 2.simple.md  3.typescript.md  foundations.md
NextJS/0.js2React/: 0.js.html  (+1 more)
Real_Time_Rendering/: RTR1.md  RTR2.md  RTR3.md  RTR4.md  RTR5.md  RTR6.md  RTR7.md  Real_Time_Rendering.md
Rust/: 0.pluralsight.md
TypeScript/: Pluralsight_Intro.md
(+35 files in other folders)
